[package]
name = "libr2fa"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "rust implementation for HTOP, TOTP and steam guard tow-factor-authentication"
readme = "README.md"
repository = "https://github.com/Alex222222222222/r2fa"
homepage = "https://github.com/Alex222222222222/r2fa"
documentation = "https://docs.rs/libr2fa/"
keywords = ["2fa", "HTOP", "TOTP", "steamguard", "Authentication"]
categories = ["authentication"]
authors = ["Alex Hua <huazifan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
data-encoding = "2.3.3"
ring = "0.16.20"
chrono = "0.4.24"
regex = "1.7.3"
once_cell = "1.17.1"
url = "2.3.1"
rqrr = { version = "0.6.0", optional = true }
image = { version = "0.24.6", optional = true }
qrcodegen = { version = "1.8.0", optional = true }
reqwest = { version = "0.11", features = [
  "blocking",
  "json",
  "cookies",
  "gzip",
  "rustls-tls",
], optional = true }
serde_json = { version = "1.0.96", optional = true }
rsa = { version = "0.8.2", optional = true }
rand = { version = "0.8.5", optional = true }

[features]
default = ["qrcode", "steam"]
qrcode = ["qrcoderead", "qrcodegen"]
qrcoderead = ["dep:rqrr", "dep:image"]
qrcodegen = ["dep:qrcodegen", "dep:image"]
steam = ["dep:reqwest", "dep:serde_json", "dep:rsa", "dep:rand"]

[dev-dependencies]
libauthenticator = "0.1.0"
totp-rs = "5.0.1"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
