[package]
name = "libr2fa"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "rust implementation for HTOP, TOTP and steam guard tow-factor-authentication"
readme = "README.md"
repository = "https://github.com/Alex222222222222/r2fa"
homepage = "https://github.com/Alex222222222222/r2fa"
documentation = "https://docs.rs/libr2fa/"
keywords = ["2fa", "HTOP", "TOTP", "steamguard", "Authentication"]
categories = ["authentication"]
authors = ["Alex Hua <huazifan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
data-encoding = "2.3.3"
sha2 = "0.10.7"
sha1 = "0.10.5"
hmac = "0.12.1"
chrono = "0.4.24"
regex = "1.7.3"
once_cell = "1.17.1"
url = "2.3.1"
rqrr = { version = "0.6.0", optional = true } # read qrcode
image = { version = "0.24.6", optional = true }
qrcodegen = { version = "1.8.0", optional = true } # generate qrcode
serde_json = { version = "1.0.96", optional = true }
log = { version = "0.4.17", optional = true }

[features]
default = ["qrcode", "steam", "log"]
qrcode = ["qrcoderead", "qrcodegen"]
qrcoderead = ["dep:rqrr", "dep:image"]
qrcodegen = ["dep:qrcodegen", "dep:image"]
steam = ["dep:serde_json"]
log = ["dep:log"]

[dev-dependencies]
libauthenticator = "0.1.0"
totp-rs = "5.0.1"
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8.5" }

[[bench]]
name = "bench"
harness = false
